--- a/app/src/main/res/layout/activity_edit_address.xml
+++ b/app/src/main/res/layout/activity_edit_address.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginTop="25dp"
-        android:text="Sửa địa chỉ"
+        android:text="@string/sua_dia"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -181,7 +181,7 @@
         android:layout_marginTop="272dp"
         android:background="@drawable/bg_btn"
         android:gravity="center"
-        android:text="Lưu"
+        android:text="@string/l_u"
         android:textStyle="bold"
         android:textColor="#F5F5F5"
         android:textSize="20sp"
