--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.account.Activity.InformationActivity">
 
     <ImageView
-        android:id="@+id/img_back_setting"
+        android:id="@+id/img_back_Information"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -21,8 +21,9 @@
         android:id="@+id/textView26"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
-        android:layout_marginTop="25dp"
-        android:text="Sửa thông tin"
+        android:layout_marginTop="28dp"
+        android:text="@string/sua_thong_t"
+        android:fontFamily="@font/be_vietnam_medium"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,6 +84,7 @@
         android:drawableRight="@drawable/ic_pen"
         android:hint="Nhập email"
         android:paddingLeft="25dp"
+        android:fontFamily="@font/be_vietnam_medium"
         android:paddingRight="15dp"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -100,6 +102,7 @@
         android:drawableRight="@drawable/ic_pen"
         android:hint="Nhập số điện thoại"
         android:paddingLeft="25dp"
+        android:fontFamily="@font/be_vietnam_medium"
         android:paddingRight="15dp"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -116,6 +119,7 @@
         android:background="@drawable/bg_borders_edit"
         android:drawableRight="@drawable/ic_pen"
         android:hint="DD/MM/YY"
+        android:fontFamily="@font/be_vietnam_medium"
         android:paddingLeft="25dp"
         android:paddingRight="15dp"
         android:textSize="16sp"
@@ -133,6 +137,7 @@
         android:background="@drawable/bg_borders_edit"
         android:drawableRight="@drawable/ic_pen"
         android:hint="Nhập tên"
+        android:fontFamily="@font/be_vietnam_medium"
         android:paddingLeft="25dp"
         android:paddingRight="15dp"
         android:textSize="16sp"
@@ -147,7 +152,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginTop="20dp"
-        android:text="Số điện thoại"
+        android:text="@string/s_d_t"
+        android:fontFamily="@font/be_vietnam_medium"
         android:textColor="#000000"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -159,7 +165,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginTop="10dp"
-        android:text="Họ và tên"
+        android:text="@string/h_v_t"
+        android:fontFamily="@font/be_vietnam_medium"
         android:textColor="#000000"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -171,8 +178,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginTop="20dp"
-        android:text="Địa chị Email"
+        android:text="@string/d_c_E"
         android:textColor="#000000"
+        android:fontFamily="@font/be_vietnam_medium"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText2" />
@@ -183,8 +191,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginTop="20dp"
-        android:text="Ngày sinh"
+        android:text="@string/n_s"
         android:textColor="#000000"
+        android:fontFamily="@font/be_vietnam_medium"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText4" />
