--- a/app/src/main/res/layout/item_vertical_products.xml
+++ b/app/src/main/res/layout/item_vertical_products.xml
@@ -31,6 +31,7 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
         android:text="Cơm gà nướng mật ong"
+        android:fontFamily="@font/be_vietnam_medium"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,6 +45,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
         android:text="2gam"
+        android:fontFamily="@font/be_vietnam_medium"
         android:textColor="#7C7C7C"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,6 +58,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
         android:text="45.000 đ"
+        android:fontFamily="@font/be_vietnam_medium"
         android:textColor="#000000"
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
