--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.account.Activity.AddressActivity">
 
     <ImageView
-        android:id="@+id/img_back_setting"
+        android:id="@+id/img_back_Address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -22,12 +22,13 @@
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginTop="30dp"
-        android:text="Địa chỉ"
+        android:fontFamily="@font/be_vietnam_medium"
+        android:text="@string/dia_chi"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.431"
-        app:layout_constraintStart_toEndOf="@+id/img_back_setting"
+        app:layout_constraintStart_toEndOf="@+id/img_back_Address"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -45,8 +46,10 @@
         android:id="@+id/tvdiadiemcuaban"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:text="Địa điểm của bạn"
+        android:text="@string/dia_chi_ban"
         android:gravity="center_vertical"
+        android:fontFamily="@font/be_vietnam_medium"
+        android:paddingLeft="15dp"
         android:textSize="10dp"
         android:textColor="#000000"
         android:background="#F6F4F4"
@@ -67,7 +70,6 @@
         app:layout_constraintTop_toBottomOf="@+id/tvdiadiemcuaban">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-
             android:id="@+id/cl_contact"
             android:layout_width="match_parent"
             android:layout_height="65dp"
@@ -83,6 +85,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="10dp"
+                android:fontFamily="@font/be_vietnam_medium"
                 android:text="Nhà"
                 android:textColor="#000000"
                 android:textSize="14sp"
@@ -143,6 +146,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="10dp"
                 android:text="Công Ty"
+                android:fontFamily="@font/be_vietnam_medium"
                 android:textColor="#000000"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -199,13 +203,13 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/item_themdiachi"
                 android:layout_marginLeft="24dp"
-                android:layout_marginTop="18dp"
+                android:src="@drawable/item_themdiachi"
+                app:layout_constraintBottom_toBottomOf="@+id/textView17"
                 app:layout_constraintEnd_toStartOf="@+id/textView17"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="@+id/textView17" />
 
             <TextView
                 android:id="@+id/textView17"
@@ -213,7 +217,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
                 android:layout_marginTop="10dp"
-                android:text="Thêm địa chỉ "
+                android:text="@string/add_dia"
+                android:fontFamily="@font/be_vietnam_medium"
                 android:textColor="#EC8383"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
