--- a/app/src/main/res/layout/activity_doi_pass.xml
+++ b/app/src/main/res/layout/activity_doi_pass.xml
@@ -6,14 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.account.Activity.ChangeiPassActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.account.Activity.SettingActivity"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-73dp">
+
 
         <ImageView
+            android:id="@+id/img_back_Changei"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
@@ -28,8 +24,9 @@
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:layout_marginTop="25dp"
-            android:text="Đổi mật khẩu"
+            android:text="@string/doi_pass"
             android:textColor="#000000"
+            android:fontFamily="@font/be_vietnam_medium"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,6 +46,7 @@
             android:id="@+id/edtPassChange"
             android:layout_width="0dp"
             android:layout_height="60dp"
+            android:fontFamily="@font/be_vietnam_medium"
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="150dp"
             android:background="@drawable/bg_edit_text"
@@ -68,6 +66,7 @@
             android:layout_height="60dp"
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="25dp"
+            android:fontFamily="@font/be_vietnam_medium"
             android:background="@drawable/bg_edit_text"
             android:drawableStart="@drawable/ic_lock"
             android:drawablePadding="12dp"
@@ -112,7 +111,7 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.5" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
