--- a/app/src/main/res/layout/activity_login_fa_go.xml
+++ b/app/src/main/res/layout/activity_login_fa_go.xml
@@ -55,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/login_go"
                 android:textSize="14sp"
+                android:fontFamily="@font/be_vietnam_medium"
                 android:textColor="#666666"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -102,6 +103,7 @@
                 android:text="@string/login_fa"
                 android:textSize="14sp"
                 android:textColor="#FFFFFF"
+                android:fontFamily="@font/be_vietnam_medium"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.253"
@@ -122,13 +124,14 @@
         android:text="Hoặc"
         android:textSize="20dp"
         android:textColor="#000000"
+        android:fontFamily="@font/be_vietnam_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cvLoginFacebook" />
 
 
-    <TextView
+    <Button
         android:id="@+id/tvLoginDangNhap"
         android:layout_width="0dp"
         android:layout_height="55dp"
@@ -153,7 +156,7 @@
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintHorizontal_chainStyle="packed"
-
+        android:fontFamily="@font/be_vietnam_medium"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/tvTextLoginDangky"
         app:layout_constraintTop_toBottomOf="@id/tvLoginDangNhap" />
@@ -167,7 +170,7 @@
         android:text="@string/ng_k"
         android:textColor="#B43838"
         android:textSize="16sp"
-
+        android:fontFamily="@font/be_vietnam_medium"
         app:layout_constraintLeft_toRightOf="@id/tvKhongTK"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvLoginDangNhap" />
