--- a/app/src/main/res/layout/activity_policy.xml
+++ b/app/src/main/res/layout/activity_policy.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/img_back_policy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="7dp"
+        android:layout_height="14dp"
         android:layout_marginStart="25dp"
         android:src="@drawable/ic_back"
         app:layout_constraintBottom_toBottomOf="@+id/textView26"
@@ -22,8 +22,9 @@
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginTop="25dp"
-        android:text="Điều khoản và Chính sách"
+        android:text="@string/dieu_khoan_vs_chinh"
         android:textColor="#000000"
+        android:fontFamily="@font/be_vietnam_medium"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
