--- a/app/src/main/res/layout/activity_receipt.xml
+++ b/app/src/main/res/layout/activity_receipt.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.account.Activity.ReceiptActivity">
     <ImageView
-        android:id="@+id/img_back_setting"
+        android:id="@+id/img_back_Receipt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -20,13 +20,14 @@
         android:id="@+id/textView26"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
-        android:layout_marginTop="30dp"
-        android:text="Lịch sử hóa đơn"
+        android:layout_marginTop="32dp"
+        android:text="@string/lich_s_h_d"
+        android:fontFamily="@font/be_vietnam_medium"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.431"
-        app:layout_constraintStart_toEndOf="@+id/img_back_setting"
+        app:layout_constraintHorizontal_bias="0.407"
+        app:layout_constraintStart_toEndOf="@+id/img_back_Receipt"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
