--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="60dp"
-
+        android:fontFamily="@font/be_vietnam_medium"
         android:text="@string/ng_k"
         android:textColor="@color/black"
         android:textSize="32sp"
@@ -44,6 +44,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="10dp"
         android:text="@string/nh_p_th_ng_tin_ng_nh_p_c_a_b_n"
+        android:fontFamily="@font/be_vietnam_medium"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,6 +59,7 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/bg_edit_text"
         android:drawableStart="@drawable/ic_mess"
+        android:fontFamily="@font/be_vietnam_medium"
         android:drawablePadding="12dp"
         android:hint="@string/h_v_t_n"
         android:paddingStart="16dp"
@@ -77,7 +79,7 @@
         android:drawablePadding="12dp"
         android:hint="@string/email"
         android:paddingStart="16dp"
-
+        android:fontFamily="@font/be_vietnam_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edtHoTen" />
@@ -93,7 +95,7 @@
         android:drawablePadding="12dp"
         android:hint="@string/nh_p_m_t_kh_u"
         android:paddingStart="16dp"
-
+        android:fontFamily="@font/be_vietnam_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,14 +111,14 @@
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="12dp"
         android:hint="@string/nh_p_l_i_m_t_kh_u"
-
+        android:fontFamily="@font/be_vietnam_medium"
         android:paddingStart="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtPassWordDangKy" />
 
-    <TextView
+    <Button
         android:id="@+id/tvDangKy"
         android:layout_width="0dp"
         android:layout_height="55dp"
@@ -156,7 +158,7 @@
         android:text="@string/da_co_tai_khoan_chua"
         android:textColor="@color/black"
         android:textSize="14sp"
-
+        android:fontFamily="@font/be_vietnam_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.411"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -173,6 +175,7 @@
         android:textColor="#B43838"
         android:onClick="BackToLogin"
         android:textSize="14sp"
+        android:fontFamily="@font/be_vietnam_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView2"
