--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -22,8 +22,9 @@
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginTop="25dp"
-        android:text="Cài đặt "
+        android:text="@string/c_d"
         android:textColor="#000000"
+        android:fontFamily="@font/be_vietnam_medium"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,8 +43,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:text="Giao diện tối"
+            android:text="@string/gi_d_t"
             android:textColor="#000000"
+            android:fontFamily="@font/be_vietnam_medium"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -113,8 +115,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-
-            android:text="Cài đặt thông báo"
+            android:fontFamily="@font/be_vietnam_medium"
+            android:text="@string/cai_d_t_b"
             android:textColor="#000000"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
