--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -13,6 +13,7 @@
         android:background="#F9514F"
         android:gravity="center"
         android:text="Tìm Kiếm"
+        android:fontFamily="@font/be_vietnam_bold"
         android:textColor="#181725"
         android:textSize="22sp"
         android:textStyle="bold"
@@ -82,6 +83,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:fontFamily="@font/be_vietnam_medium"
             android:layout_marginTop="5dp"
             android:text="2gam"
             android:textColor="#7C7C7C"
@@ -95,6 +97,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="10dp"
+            android:fontFamily="@font/be_vietnam_medium"
             android:text="45.000 đ"
             android:textColor="#000000"
             android:textSize="15dp"
