--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -13,6 +13,7 @@
         android:gravity="center"
         android:text="Yêu Thích"
         android:textColor="#181725"
+        android:fontFamily="@font/be_vietnam_bold"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,6 +66,7 @@
             android:layout_marginHorizontal="10dp"
             android:layout_marginTop="10dp"
             android:text="Cơm gà nướng mật ong"
+            android:fontFamily="@font/be_vietnam_medium"
             android:textColor="#000000"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-
+            android:fontFamily="@font/be_vietnam_medium"
             android:layout_marginBottom="10dp"
             android:text="45.000 đ"
             android:textColor="#000000 "
@@ -92,6 +94,7 @@
             android:id="@+id/textView22"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/be_vietnam_medium"
             android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
             android:text="2 gam"
