--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -13,6 +13,7 @@
         android:gravity="center"
         android:text="Trang Chủ"
         android:textColor="#181725"
+        android:fontFamily="@font/be_vietnam_bold"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,6 +83,7 @@
                 android:layout_marginRight="15dp"
                 android:text="View All"
                 android:textColor="#F44E4E"
+                android:fontFamily="@font/be_vietnam_medium"
                 android:textSize="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.93"
@@ -96,6 +98,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="88dp"
                 android:text="Combo  "
+                android:fontFamily="@font/be_vietnam_medium"
                 android:textColor="#000000"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -395,6 +398,7 @@
                 android:text="View All"
                 android:textColor="#F44E4E"
                 android:textSize="16dp"
+                android:fontFamily="@font/be_vietnam_medium"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textView11"
                 app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />
@@ -407,6 +411,7 @@
                 android:text="Hot"
                 android:textColor="#000000"
                 android:textSize="24sp"
+                android:fontFamily="@font/be_vietnam_medium"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.082"
                 app:layout_constraintStart_toStartOf="parent"
@@ -689,6 +694,7 @@
                 android:text="New"
                 android:textColor="#000000"
                 android:textSize="24sp"
+                android:fontFamily="@font/be_vietnam_medium"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.044"
                 app:layout_constraintStart_toStartOf="parent"
@@ -703,6 +709,7 @@
                 android:text="View All"
                 android:textColor="#F44E4E"
                 android:textSize="16dp"
+                android:fontFamily="@font/be_vietnam_medium"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.943"
                 app:layout_constraintStart_toEndOf="@+id/textView8"
