--- a/app/src/main/res/layout/item_cart_products.xml
+++ b/app/src/main/res/layout/item_cart_products.xml
@@ -3,10 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_borders_sp"
     android:layout_width="match_parent"
-    android:layout_height="130dp"
+    android:layout_marginTop="10dp"
     android:layout_marginHorizontal="8dp"
-    android:layout_marginTop="10dp">
-
+    android:layout_height="120dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView6"
@@ -25,24 +24,15 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/img_sp" />
         </androidx.cardview.widget.CardView>
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_margin="3dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/cart_item_delete"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <TextView
+            android:fontFamily="@font/be_vietnam_medium"
             android:id="@+id/textView19"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="10dp"
             android:layout_marginTop="10dp"
             android:text="Cơm gà nướng mật ong"
-            android:textColor="#000000"
+            android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/cardView6"
@@ -59,10 +49,11 @@
 
             <TextView
                 android:id="@+id/textView15"
-                android:layout_width="0dp"
+                android:layout_width="10dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="1"
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/imageView10"
                 app:layout_constraintStart_toEndOf="@+id/imageView7"
@@ -72,7 +63,7 @@
                 android:id="@+id/imageView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/cart_item_cong"
+                android:src="@drawable/explore_cong"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -81,24 +72,22 @@
                 android:id="@+id/imageView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/cart_item_tru"
+                android:src="@drawable/explore_tru"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
+            android:fontFamily="@font/be_vietnam_medium"
             android:id="@+id/textView20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="20dp"
             android:text="45.000 đ"
-            android:textColor="#000000 "
+            android:textColor="@color/black"
             android:textSize="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
