--- a/app/src/main/res/layout/item_hot_products.xml
+++ b/app/src/main/res/layout/item_hot_products.xml
@@ -36,6 +36,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
+        android:fontFamily="@font/be_vietnam_medium"
         android:id="@+id/textView19"
         android:layout_width="0dp"
         android:layout_height="50dp"
@@ -66,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginBottom="10dp"
-
+        android:fontFamily="@font/be_vietnam_medium"
         android:layout_marginTop="5dp"
         android:text="45.000 đ"
         android:textColor="#000000 "
