--- a/app/src/main/res/layout/item_search_products.xml
+++ b/app/src/main/res/layout/item_search_products.xml
@@ -25,6 +25,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:fontFamily="@font/be_vietnam_medium"
         android:id="@+id/textView17"
         android:layout_width="0dp"
         android:layout_height="55dp"
@@ -39,6 +40,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:fontFamily="@font/be_vietnam_medium"
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -51,6 +53,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
     <TextView
+        android:fontFamily="@font/be_vietnam_medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
