--- a/app/src/main/res/layout/item_test.xml
+++ b/app/src/main/res/layout/item_test.xml
@@ -1,11 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.apachat.swipereveallayout.core.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/bg_borders_sp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:layout_marginHorizontal="8dp"
-    android:layout_height="125dp">
+    android:id="@+id/accelerate"
+    app:dragEdge="right"
+    app:mode="same_level">
+    <FrameLayout
+        android:layout_width="70dp"
+        android:layout_height="match_parent">
+        <androidx.cardview.widget.CardView
+            android:layout_marginLeft="3dp"
+            app:cardCornerRadius="6dp"
+            android:background="#ff0000"
+            android:layout_width="match_parent"
+            android:layout_height="125dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="5dp"
+                android:fontFamily="@font/be_vietnam_medium"
+                android:text="Delete"
+                android:textSize="16sp" />
+
+        </androidx.cardview.widget.CardView>
+    </FrameLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@drawable/bg_borders_sp"
+        android:layout_width="match_parent"
+        android:layout_height="125dp">
+
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView6"
@@ -90,4 +119,5 @@
             android:textSize="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</com.apachat.swipereveallayout.core.SwipeLayout>
