--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -34,7 +34,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTimKiem"
         app:queryBackground="@null"
-        app:queryHint="Search for posts and people" />
+        app:queryHint="Tên sản phẩm bạn cần tìm." />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
