--- a/app/src/main/res/layout/activity_confirm_otpactivity.xml
+++ b/app/src/main/res/layout/activity_confirm_otpactivity.xml
@@ -31,8 +31,9 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName"
+        android:background="@drawable/bg_rim"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginHorizontal="35dp"
         android:layout_marginTop="60dp"
         android:ems="10"
